<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/card_padding_vertical"
    android:layout_marginEnd="@dimen/card_padding_horizontal"
    android:layout_marginStart="@dimen/card_padding_horizontal"
    android:layout_marginTop="@dimen/card_padding_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/weatherDetailTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="wrap"
        />

    <TextView
        android:id="@+id/weatherTypeTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintTop_toBottomOf="@id/weatherDetailTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:text="@string/weather_type_title"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="wrap"
        />

    <TextView
        android:id="@+id/weatherTypeValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintStart_toEndOf="@id/weatherTypeTitle"
        app:layout_constraintTop_toBottomOf="@id/weatherDetailTitle"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        />

    <TextView
        android:id="@+id/temperatureTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintTop_toBottomOf="@id/weatherTypeTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:text="@string/temperature_title"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="wrap"
        />

    <TextView
        android:id="@+id/temperatureValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintStart_toEndOf="@id/temperatureTitle"
        app:layout_constraintTop_toBottomOf="@id/weatherTypeTitle"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        />

    <TextView
        android:id="@+id/humidityTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintTop_toBottomOf="@id/temperatureTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:text="@string/humidity_title"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="wrap"
        />

    <TextView
        android:id="@+id/humidityValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintStart_toEndOf="@id/humidityTitle"
        app:layout_constraintTop_toBottomOf="@id/temperatureTitle"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        />

    <TextView
        android:id="@+id/windSpeedTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintTop_toBottomOf="@id/humidityTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:text="@string/wind_speed_title"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="wrap"
        />

    <TextView
        android:id="@+id/windSpeedValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintStart_toEndOf="@id/windSpeedTitle"
        app:layout_constraintTop_toBottomOf="@id/humidityTitle"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        />

    <TextView
        android:id="@+id/cloudCoverTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintTop_toBottomOf="@id/windSpeedTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:text="@string/cloud_cover_title"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="wrap"
        />

    <TextView
        android:id="@+id/cloudCoverValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/textview_padding"
        app:layout_constraintStart_toEndOf="@id/cloudCoverTitle"
        app:layout_constraintTop_toBottomOf="@id/windSpeedTitle"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        />






</android.support.constraint.ConstraintLayout>